# fortune-hyperbolic

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sample.txt
experiments/: CMakeLists.txt  compare.py  old.cpp  utils.py  visualizer.py
fortune-hyperbolic/: Doxyfile  FindMPFR.cmake  Fortune_HyperbolicConfig.cmake  mainpage.dox
fortune-hyperbolic/docs/html/: annotated.html  beachline_8hpp.html  beachline_8hpp_source.html  calculations_8hpp.html  calculations_8hpp_source.html  canvas_8hpp.html  canvas_8hpp_source.html  classes.html  classhyperbolic_1_1BeachLine-members.html  classhyperbolic_1_1BeachLine.html  classhyperbolic_1_1BeachLineElement-members.html  classhyperbolic_1_1BeachLineElement.html  classhyperbolic_1_1CircleEvent-members.html  classhyperbolic_1_1CircleEvent.html  classhyperbolic_1_1Event-members.html  classhyperbolic_1_1Event.html  classhyperbolic_1_1EventQueue-members.html  classhyperbolic_1_1EventQueue.html  classhyperbolic_1_1FortuneHyperbolicImplementation-members.html  classhyperbolic_1_1FortuneHyperbolicImplementation.html  classhyperbolic_1_1FullNativeKernel-members.html  classhyperbolic_1_1FullNativeKernel.html  classhyperbolic_1_1Kernel-members.html  classhyperbolic_1_1Kernel.html  classhyperbolic_1_1SiteEvent-members.html  classhyperbolic_1_1SiteEvent.html  classhyperbolic_1_1Utils-members.html  classhyperbolic_1_1Utils.html  classhyperbolic_1_1VoronoiDiagram-members.html  classhyperbolic_1_1VoronoiDiagram.html  datastructures_8hpp.html  datastructures_8hpp_source.html  dir_1b6426aac99d1197bee25672dffd0506.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  fortune_8hpp.html  fortune_8hpp_source.html  functions.html  functions_func.html  functions_type.html  (+38 more)
fortune-hyperbolic/docs/html/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+37 more)
fortune-hyperbolic/docs/latex/: annotated.tex  beachline_8hpp.tex  beachline_8hpp_source.tex  calculations_8hpp.tex  calculations_8hpp_source.tex  canvas_8hpp.tex  canvas_8hpp_source.tex  classhyperbolic_1_1BeachLine.tex  classhyperbolic_1_1BeachLineElement.tex  classhyperbolic_1_1CircleEvent.eps  classhyperbolic_1_1CircleEvent.tex  classhyperbolic_1_1Event.eps  classhyperbolic_1_1Event.tex  classhyperbolic_1_1EventQueue.eps  classhyperbolic_1_1EventQueue.tex  classhyperbolic_1_1FortuneHyperbolicImplementation.tex  classhyperbolic_1_1FullNativeKernel.eps  classhyperbolic_1_1FullNativeKernel.tex  classhyperbolic_1_1Kernel.eps  classhyperbolic_1_1Kernel.tex  classhyperbolic_1_1SiteEvent.eps  classhyperbolic_1_1SiteEvent.tex  classhyperbolic_1_1Utils.tex  classhyperbolic_1_1VoronoiDiagram.tex  datastructures_8hpp.tex  datastructures_8hpp_source.tex  dir_1b6426aac99d1197bee25672dffd0506.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  fortune_8hpp.tex  fortune_8hpp_source.tex  geometry_8hpp.tex  geometry_8hpp_source.tex  hierarchy.tex  index.tex  kernels_8hpp.tex  kernels_8hpp_source.tex  namespacehyperbolic.tex  namespaces.tex  refman.tex  (+11 more)
fortune-hyperbolic/include/fortune-hyperbolic/: beachline.hpp  calculations.hpp  canvas.hpp  datastructures.hpp  fortune.hpp  geometry.hpp  kernels.hpp
generator/: CMakeLists.txt  generator.cpp
include/: beachline.hpp  calculations.hpp  cmake.hpp.in  datastructures.hpp  fortune.hpp  geometry.hpp  internal.hpp  kernels.hpp  lib.hpp  utils.hpp
src/: CMakeLists.txt  calculations.cpp  datastructures.cpp  geometry.cpp  lib.cpp  utils.cpp
tests/: CMakeLists.txt  tests.cpp
